--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -12,12 +12,12 @@
     <form action="{{ path('security_login') }}" method="post">
         <div class="form-group">
             <label for="username">{{ 'Username'|trans }}</label>
-            <input type="text" id="username" name="_username" value="{{ last_username }}" class="form-control"/>
+            <input type="text" id="username" name="_username" value="admin" class="form-control"/>
         </div>
 
         <div class="form-group">
             <label for="password">{{ 'Password'|trans }}</label>
-            <input type="password" id="password" name="_password" class="form-control" />
+            <input type="password" id="password" name="_password" value="123456" class="form-control" />
         </div>
 
         <div class="form-group">
